--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <script type="text/javascript" src="/javascripts/communicator_scripts/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="/javascripts/jquery-ui-1.9.2.custom.js"></script>
     <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/javascripts/communicator_scripts/hoops_web_viewer.js?v=f8b8e66"
-        id="hwvScript"></script>
+    <!-- <script type="text/javascript" src="/javascripts/communicator_scripts/hoops_web_viewer.js?v=f8b8e66"
+        id="hwvScript"></script> -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/techsoft3d/hoops-web-viewer@2019.2.1/hoops_web_viewer.js"></script>
     <script type="text/javascript" src="/javascripts/common.js"></script>
     <script type="module" src="/javascripts/work_procedure.js"></script>
     <script type="text/javascript" src="/javascripts/camera_control.js"></script>
