--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <link rel="stylesheet" href="./stylesheets/work_procedure.css" />
     <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
 
+    <!-- Favicon head tag -->
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+
     <script>
         var language = browserLanguage();
 
