Fixed increment buttons & onResize error

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <script type="text/javascript" src="./javascripts/communicator_scripts/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="./javascripts/jquery-ui-1.9.2.custom.js"></script>
     <script type="text/javascript" src="./javascripts/bootstrap.min.js"></script>
-    <!-- <script type="text/javascript" src="/javascripts/communicator_scripts/hoops_web_viewer.js?v=f8b8e66"
-        id="hwvScript"></script> -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/techsoft3d/hoops-web-viewer@2019.2.1/hoops_web_viewer.js"></script>
     <script type="text/javascript" src="./javascripts/common.js"></script>
     <script type="module" src="./javascripts/work_procedure.js"></script>
@@ -29,7 +27,6 @@
     <link rel="stylesheet" href="./stylesheets/bootstrap.min.css" />
     <link rel="stylesheet" href="./stylesheets/work_procedure.css" />
     <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
-
     <!-- Favicon head tag -->
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
@@ -47,6 +44,8 @@
         workProc = new workProcedure(language);
         window.onload = function () { workProc.start(); };
     </script>
+    <!-- <script type="text/javascript" src="https://cloud.techsoft3d.com/javascripts/communicator_scripts/engine-wasm.js"></script> -->
+
 </head>
 
 <body>
