--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PB9P4KS');</script>
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-PB9P4KS');</script>
     <!-- End Google Tag Manager -->
-    
+
     <title>
         Work Procedure
     </title>
@@ -20,7 +23,8 @@
     <script type="text/javascript" src="./javascripts/communicator_scripts/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="./javascripts/jquery-ui-1.9.2.custom.js"></script>
     <script type="text/javascript" src="./javascripts/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/techsoft3d/hoops-web-viewer@2019.2.1/hoops_web_viewer.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/gh/techsoft3d/hoops-web-viewer@2019.2.1/hoops_web_viewer.js"></script>
     <script type="text/javascript" src="./javascripts/common.js"></script>
     <script type="module" src="./javascripts/work_procedure.js"></script>
     <script type="text/javascript" src="./javascripts/camera_control.js"></script>
@@ -58,11 +62,11 @@
 
 <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PB9P4KS"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PB9P4KS" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    
-    <div id="header"><img src="./images/TS3D_logo.png"></div>
+
+    <div id="header"><img src="./images/TS3D_logo-2024-email.png"></div>
 
     <div id="title">
         パワーウィンドウスイッチの脱着
@@ -71,8 +75,7 @@
     <div class="container">
         <div class="row">
             <div id="a" class="col-md-7">
-                <img id="loadingImageMain" style="display: none;" src="./images/spinner2.gif"
-                    class="centerBlock" />
+                <img id="loadingImageMain" style="display: none;" src="./images/spinner2.gif" class="centerBlock" />
                 <div id="mainContainer"></div>
             </div>
             <div class="col-md-5">
@@ -105,8 +108,7 @@
         </div>
     </div>
     <div id="samples">
-        <button id="legacyManual" class="btn btn-primary"
-            onclick="window.open('./images/manual.pdf')">従来のマニュアル</button>
+        <button id="legacyManual" class="btn btn-primary" onclick="window.open('./images/manual.pdf')">従来のマニュアル</button>
     </div>
     <div id="footer">© Tech Soft 3D All Rights Reserved</div>
     <div id="testButtons" style="display: none;">
@@ -130,10 +132,10 @@
         <input id="step5" type="image" name="image_button" src="./images/BTN_PROCESS_5_N.png" />
         <input id="step6" type="image" name="image_button" src="./images/BTN_PROCESS_6_N.png" />
     </div>
-    <div id="annimationMark1"><img src="./images/markAnnimation.png" class="annimationMark"
-            style="display: none;"></div>
-    <div id="annimationMark3"><img src="./images/markAnnimation.png" class="annimationMark"
-            style="display: none;"></div>
+    <div id="annimationMark1"><img src="./images/markAnnimation.png" class="annimationMark" style="display: none;">
+    </div>
+    <div id="annimationMark3"><img src="./images/markAnnimation.png" class="annimationMark" style="display: none;">
+    </div>
     <div id="slider" style="display: none;"></div>
     <div id="partProperties">
         <table id="partPropertyTable" class="table table-condensed">
@@ -153,16 +155,15 @@
             </tbody>
         </table>
     </div>
-    <input id="addCart" type="image" name="image_button" src="./images/BTN_ADDCART_N_J.png"
-        width="133px" height="36px" />
+    <input id="addCart" type="image" name="image_button" src="./images/BTN_ADDCART_N_J.png" width="133px"
+        height="36px" />
     <input id="page-up" type="image" name="image_button" src="./images/page_up.png" />
     <input id="page-down" type="image" name="image_button" src="./images/page_down.png" />
     <div id="annDialog" style="display: none;">
-        <img id="loadingImage" style="display: none;" src="./images/spinner3.gif"
-            class="centerBlock" />
+        <img id="loadingImage" style="display: none;" src="./images/spinner3.gif" class="centerBlock" />
         <div id="annContainer"></div>
-        <input id="startButton" style="display: none;" type="image" name="image_button"
-            src="./images/BTN_PLAY_N.png" class="centerBlock" />
+        <input id="startButton" style="display: none;" type="image" name="image_button" src="./images/BTN_PLAY_N.png"
+            class="centerBlock" />
         <div id="annTestButtons" style="display: none;">
             <button id="saveCamera2">Save Camera</button>
             <button id="dumpNodes2">Dump Nodes</button>
@@ -170,13 +171,12 @@
         </div>
         <div id="annViewMark"><img src="./images/markSubTitle.png"></div>
         <div id="annViewTitle" class="subTitle">詳細手順</div>
-        <input id="backButton" type="image" name="image_button" src="./images/BTN_BACK_N_J.png"
-            disabled="disabled" width="48px" height="48px" />
+        <input id="backButton" type="image" name="image_button" src="./images/BTN_BACK_N_J.png" disabled="disabled"
+            width="48px" height="48px" />
         <div id="annButtons">
-            <input id="rewindButton" type="image" name="image_button"
-                src="./images/BTN_REWIND_N.png" disabled="disabled" />
-            <input id="playButton" type="image" name="image_button" src="./images/BTN_PLAY_N.png"
+            <input id="rewindButton" type="image" name="image_button" src="./images/BTN_REWIND_N.png"
                 disabled="disabled" />
+            <input id="playButton" type="image" name="image_button" src="./images/BTN_PLAY_N.png" disabled="disabled" />
             <input id="pauseButton" type="image" name="image_button" src="./images/BTN_PAUSE_N.png"
                 disabled="disabled" />
         </div>
